Fix bad kerning
milligram.min.css put `h2 {letter-spacing: -.1rem;}` but my god does it look bad with the font.

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ h2 {
     font-size: 2rem;
     font-weight: bold;
     margin: 0.5rem auto;
+    letter-spacing: 0rem;
 }
 
 h3 {
